fix jumping around when hovering or selecting

--- a/packages/augur-ui/src/modules/create-market/landing.styles.less
+++ b/packages/augur-ui/src/modules/create-market/landing.styles.less
@@ -48,7 +48,7 @@
 
             > div:nth-of-type(2) {
                 > div {
-                    margin-bottom: @size-8;
+                    margin-bottom: @size-12;
                 }
             }
 
